Cleaned up credit api
