# libs/api/credit-api/credit/src/lib/credit.service.ts
@@ -1,163 +1,0 @@
-import { Injectable, Logger } from '@nestjs/common';
-import { InjectRepository } from '@nestjs/typeorm';
-import { Repository } from 'typeorm';
-import { Credit } from './credit.entity';
-import { GetCreditResponse } from './credit.interfaces';
-import {
-  CreateCreditMinimumCollateralError,
-  CreditNotFoundError,
-} from './credit.errors';
-import {
-  COLLATERAL_RECEIVED_TOPIC,
-  CREDIT_LINE_UPDATED_TOPIC,
-  GET_COLLATERAL_VALUE_RPC,
-} from '@archie/api/credit-api/constants';
-import { QueueService } from '@archie/api/utils/queue';
-import {
-  AssetInformation,
-  AssetList,
-} from '@archie/api/collateral-api/asset-information';
-import { GET_ASSET_INFORMATION_RPC } from '@archie/api/collateral-api/constants';
-import {
-  GetCollateralValuePayload,
-  GetCollateralValueResponse,
-} from '@archie/api/credit-api/collateral';
-import { CreditBalanceUpdatedPayload } from '@archie/api/peach-api/data-transfer-objects';
-import {
-  CollateralReceivedPayload,
-  CreditLineUpdatedDto,
-} from '@archie/api/credit-api/data-transfer-objects';
-
-@Injectable()
-export class CreditService {
-  private MINIMUM_CREDIT = 200;
-  private MAXIMUM_CREDIT = 2000;
-
-  constructor(
-    @InjectRepository(Credit) private creditRepository: Repository<Credit>,
-    private queueService: QueueService,
-  ) {}
-
-  public async createCredit(userId: string): Promise<GetCreditResponse> {
-    const creditRecord: Credit | null = await this.creditRepository.findOneBy({
-      userId,
-    });
-
-    if (creditRecord) {
-      return {
-        totalCredit: creditRecord.totalCredit,
-        availableCredit: creditRecord.availableCredit,
-      };
-    }
-
-    const collateralValue: GetCollateralValueResponse[] =
-      await this.queueService.request<
-        GetCollateralValueResponse[],
-        GetCollateralValuePayload
-      >(GET_COLLATERAL_VALUE_RPC, {
-        userId,
-      });
-
-    const assetList: AssetList = await this.queueService.request(
-      GET_ASSET_INFORMATION_RPC,
-    );
-
-    let totalCollateralValue: number = this.getCreditLimit(
-      collateralValue,
-      assetList,
-    );
-
-    if (totalCollateralValue < this.MINIMUM_CREDIT) {
-      throw new CreateCreditMinimumCollateralError(this.MINIMUM_CREDIT);
-    }
-
-    if (totalCollateralValue > this.MAXIMUM_CREDIT) {
-      Logger.warn({
-        code: 'CREATE_CREDIT_MAXIMUM_COLLATERAL_VALUE_EXCEEDED',
-        metadata: {
-          userId,
-        },
-      });
-
-      totalCollateralValue = this.MAXIMUM_CREDIT;
-    }
-
-    this.queueService.publish<CollateralReceivedPayload>(
-      COLLATERAL_RECEIVED_TOPIC,
-      {
-        userId,
-      },
-    );
-
-    await this.creditRepository.save({
-      userId,
-      totalCredit: totalCollateralValue,
-      availableCredit: totalCollateralValue,
-    });
-
-    return {
-      availableCredit: totalCollateralValue,
-      totalCredit: totalCollateralValue,
-    };
-  }
-
-  public getCreditLimit(
-    collateralValue: GetCollateralValueResponse[],
-    assetList: AssetList,
-  ): number {
-    return collateralValue.reduce(
-      (sum: number, value: GetCollateralValueResponse) => {
-        if (assetList[value.asset] === undefined) {
-          return sum;
-        }
-
-        const assetInformation: AssetInformation = <AssetInformation>(
-          assetList[value.asset]
-        );
-
-        const actualCollateralValue: number =
-          (value.price / 100) * assetInformation.ltv;
-
-        return sum + Math.floor(actualCollateralValue);
-      },
-      0,
-    );
-  }
-
-  public async getCredit(userId: string): Promise<GetCreditResponse> {
-    const credit: Credit | null = await this.creditRepository.findOneBy({
-      userId,
-    });
-
-    if (credit === null) {
-      throw new CreditNotFoundError();
-    }
-
-    return {
-      availableCredit: credit.availableCredit,
-      totalCredit: credit.totalCredit,
-    };
-  }
-
-  public async updateCredit(
-    credit: CreditBalanceUpdatedPayload,
-  ): Promise<void> {
-    // TODO: this introduces a race condition.
-    // option 1: If calculated at < updated at then return failed event
-    // use locks -- shared between services??
-    // do updates first on peach then our local copy -- peach already has locks (our local copy ONLY for reads)
-    await this.creditRepository.update(
-      {
-        userId: credit.userId,
-      },
-      {
-        availableCredit: credit.availableCreditAmount,
-        totalCredit: credit.creditLimitAmount,
-      },
-    );
-
-    this.queueService.publish<CreditLineUpdatedDto>(CREDIT_LINE_UPDATED_TOPIC, {
-      userId: credit.userId,
-    });
-  }
-}
