# libs/api/credit-api/rize/src/lib/rize.service.ts
@@ -22,16 +22,8 @@ import { RizeFactoryService } from './factory/rize_factory.service';
 import { RizeValidatorService } from './validator/rize_validator.service';
 import {
   CARD_ACTIVATED_TOPIC,
-  CREDIT_FUNDS_LOADED_TOPIC,
   TRANSACTION_UPDATED_TOPIC,
 } from '@archie/api/credit-api/constants';
-import { InjectRepository } from '@nestjs/typeorm';
-import { Repository } from 'typeorm';
-import {
-  Credit,
-  CreditService,
-  GetCreditResponse,
-} from '@archie/api/credit-api/credit';
 import { QueueService } from '@archie/api/utils/queue';
 import {
   GET_USER_EMAIL_ADDRESS_RPC,
@@ -43,7 +35,6 @@ import {
 } from '@archie/api/user-api/user';
 import {
   CardActivatedPayload,
-  FundsLoadedPayload,
   TransactionUpdatedPayload,
 } from '@archie/api/credit-api/data-transfer-objects';
 import { CardResponseDto, CardStatus } from './rize.dto';
@@ -58,12 +49,10 @@ export class RizeService {
   private rizeMessagingQueueClient;
 
   constructor(
-    @InjectRepository(Credit) private creditRepository: Repository<Credit>,
     private rizeApiService: RizeApiService,
     private rizeFactoryService: RizeFactoryService,
     private rizeValidatorService: RizeValidatorService,
     private queueService: QueueService,
-    private creditService: CreditService,
   ) {
     this.rizeEventListener = this.rizeEventListener.bind(this);
     this.handleTransactionsEvent = this.handleTransactionsEvent.bind(this);
@@ -139,20 +128,11 @@ export class RizeService {
       )
     ) {
       const userId: string = transactionDetails.customer_external_uid;
-      const amount: string = transactionDetails.us_dollar_amount;
       const transactionId: string = transactionDetails.transaction_uid;
       const newStatus: TransactionStatus = transactionDetails.new_status;
 
       const transaction: RizeTransaction =
         await this.rizeApiService.getTransaction(transactionId);
-
-      if (transactionDetails.new_status === TransactionStatus.settled) {
-        if (transaction.net_asset === 'negative') {
-          await this.decreaseAvailableCredit(userId, Number(amount));
-        } else {
-          await this.increaseAvailableCredit(userId, Number(amount));
-        }
-      }
 
       this.queueService.publish<TransactionUpdatedPayload>(
         TRANSACTION_UPDATED_TOPIC,
@@ -172,30 +152,6 @@ export class RizeService {
 
       await this.loadFunds(userId, customerId);
     }
-  }
-
-  private async decreaseAvailableCredit(userId: string, amount: number) {
-    await this.creditRepository
-      .createQueryBuilder('Credit')
-      .update(Credit)
-      .where('userId = :userId', { userId })
-      .set({
-        availableCredit: () => '"availableCredit" - :amount',
-      })
-      .setParameter('amount', amount)
-      .execute();
-  }
-
-  private async increaseAvailableCredit(userId: string, amount: number) {
-    await this.creditRepository
-      .createQueryBuilder('Credit')
-      .update(Credit)
-      .where('userId = :userId', { userId })
-      .set({
-        availableCredit: () => '"availableCredit" + :amount',
-      })
-      .setParameter('amount', amount)
-      .execute();
   }
 
   public async getVirtualCard(userId: string): Promise<CardResponseDto> {
